--- a/portfolio.html
+++ b/portfolio.html
@@ -8,84 +8,92 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
+      <div class="container">
         <nav class="header-nav">
            <a href="" class="header-logo link">Web<span class="header-logo">Studio</span></a>
               <ul class="header-list list">
-                 <li><a href="./index.html" class="header-link link">Студія</a></li>
-                 <li><a href="" class="header-link link">Портфольє</a></li>
-                 <li><a href="" class="header-link link">Контакти</a></li>
+                 <li class="item"><a href="./index.html" class="header-link link">Студія</a></li>
+                 <li class="item"><a href="" class="header-link link">Портфольє</a></li>
+                 <li class="item"><a href="" class="header-link link">Контакти</a></li>
               </ul>
         </nav>
+      </div>
+      <div class="container">
               <ul class="list">
-                 <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
-                 <li><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
+                 <li class="items"><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
+                 <li class="items"><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
               </ul>
+      </div>
     </header>
 
     <main>
-        <ul class="btn list">
-            <li><button type="button" class="btn-button">Усі</button</li>
-            <li><button type="button" class="btn-button">Веб-сайти</button</li>
-            <li><button type="button" class="btn-button">Дизайн</button</li>
-            <li><button type="button" class="btn-button">Додатки</button</li>
-            <li><button type="button" class="btn-button">Маркетинг</button</li>
+     <div class="container">
+        <ul class="btn-list list">
+            <li class="portfolio-control"><button type="button" class="btn-button">Усі</button</li>
+            <li class="portfolio-control"><button type="button" class="btn-button">Веб-сайти</button</li>
+            <li class="portfolio-control"><button type="button" class="btn-button">Дизайн</button</li>
+            <li class="portfolio-control"><button type="button" class="btn-button">Додатки</button</li>
+            <li class="portfolio-control"><button type="button" class="btn-button">Маркетинг</button</li>
         </ul>
         <ul class="portfolio-list list">
-            <li class="imge">
+            <li class="items">
                 <img src="./imge/img7.jpg" alt="фото ноутбук" width="370" height="294">
                 <h2 class="portfolio-title">Технокряк</h2>
                 <p class="portfolio-text">Веб-сайт</p>
             </li>
-            <li>
+            <li class="items">
                 <img src="./imge/img8.jpg" alt="фото баскетболісти" width="370" height="294">
                 <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                 <p class="portfolio-text">Дизаин</p>
             </li>
-            <li>
+            <li class="items">
                 <img src="./imge/img9.jpg" alt="фото логотип ресторану" width="370" height="294">
                 <h2 class="portfolio-title">Ресторан Seafood</h2>
                 <p class="portfolio-text">Додаток</p>
-              </li>
-            <li>
+            </li>
+            <li class="items">
                 <img src="./imge/img10.jpg" alt="фото навушники" width="370" height="294">
                 <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                 <p class="portfolio-text">Маркетинг</p>
             </li>
-            <li>
+            <li class="items">
                 <img src="./imge/img11.jpg" alt="фото коробка" width="370" height="294">
                 <h2 class="portfolio-title">Проєкт Boxes</h2>
                 <p class="portfolio-text">Додаток</p>
             </li>
-            <li>
+            <li class="items">
                 <img src="./imge/img12.jpg" alt="фото комп'ютер" width="370" height="294">
                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
                 <p class="portfolio-text">Веб-сайт</p>
             </li>
-            <li>
+            <li class="items">
                 <img src="./imge/img13.jpg" alt="фото книга" width="370" height="294">
                 <h2 class="portfolio-title">Видання Limited Edition</h2>
                 <p class="portfolio-text">Дизаин</p>
-              </li>
-            <li>
+            </li>
+            <li class="items">
                 <img src="./imge/img14.jpg" alt="фото емблема" width="370" height="294">
                 <h2 class="portfolio-title">Проєкт LAB</h2>
                 <p class="portfolio-text">Маркетинг</p>
-            <li>
+            </li>
+            <li class="items">
                 <img src="./imge/img15.jpg" alt="фото екран ноутбука" width="379" height="294">
                 <h2 class="portfolio-title">Growing Business</h2>
                 <p class="portfolio-text" lang="en">Додаток</p>
             </li>
-            </li>
         </ul>
+    </div>
 
     </main>
 
     <footer class="footer">
+      <div class="container">
         <a href="/" class="footer-logo">Web<span class="footer-logo">Studio</span></a>
            <address>
               <ul class="footer-list list">
@@ -100,6 +108,7 @@
                  </li>
               </ul>
         </address>
+      </div>
     </footer> 
     
 </body>
