--- a/portfolio.html
+++ b/portfolio.html
@@ -13,35 +13,36 @@
 </head>
 
 <body>
-    <header>
-      <div class="container">
-        <nav class="header-nav">
-           <a href="" class="header-logo link">Web<span class="header-logo">Studio</span></a>
-              <ul class="header-list list">
-                 <li class="item"><a href="./index.html" class="header-link link">Студія</a></li>
-                 <li class="item"><a href="" class="header-link link">Портфольє</a></li>
-                 <li class="item"><a href="" class="header-link link">Контакти</a></li>
-              </ul>
-        </nav>
-      </div>
-      <div class="container">
-              <ul class="list">
-                 <li class="items"><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
-                 <li class="items"><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
-              </ul>
-      </div>
+    <header class="portfolio-header">
+        <div class="container header-dask">
+           <nav class="header-nav">
+             <a href="" class="header-logo link">Web<span class="header-logo">Studio</span></a>
+                 <ul class="header-list list">
+                    <li class="item"><a href="./index.html" class="header-link link">Студія</a></li>
+                    <li class="item"><a href="" class="header-link link">Портфоліо</a></li>
+                    <li class="item"><a href="" class="header-link link">Контакти</a></li>
+                 </ul>
+           </nav>
+                 <ul class="list">
+                    <li class="items"><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
+                    <li class="items"><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
+                 </ul>
+         </div>
     </header>
-
+       
     <main>
-     <div class="container">
-        <ul class="btn-list list">
+     <section class="section">
+      <div class="container">
+        <div class="list-port">
+        <ul class="btn-list list list-port">
             <li class="portfolio-control"><button type="button" class="btn-button">Усі</button</li>
             <li class="portfolio-control"><button type="button" class="btn-button">Веб-сайти</button</li>
             <li class="portfolio-control"><button type="button" class="btn-button">Дизайн</button</li>
             <li class="portfolio-control"><button type="button" class="btn-button">Додатки</button</li>
             <li class="portfolio-control"><button type="button" class="btn-button">Маркетинг</button</li>
         </ul>
-        <ul class="portfolio-list list">
+    </div>
+        <ul class="list-portfolio">
             <li class="items">
                 <img src="./imge/img7.jpg" alt="фото ноутбук" width="370" height="294">
                 <h2 class="portfolio-title">Технокряк</h2>
@@ -83,34 +84,33 @@
                 <p class="portfolio-text">Маркетинг</p>
             </li>
             <li class="items">
-                <img src="./imge/img15.jpg" alt="фото екран ноутбука" width="379" height="294">
+                <img src="./imge/img15.jpg" alt="фото екран ноутбука" width="370" height="294">
                 <h2 class="portfolio-title">Growing Business</h2>
                 <p class="portfolio-text" lang="en">Додаток</p>
             </li>
         </ul>
-    </div>
-
+      </div>
+     </section>
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a href="/" class="footer-logo">Web<span class="footer-logo">Studio</span></a>
-           <address>
-              <ul class="footer-list list">
-                 <li>
-                    <a href="https://goo.gl/maps/DQpQ22Wtz2pHveBt8" target="_blank" class="footer-all link">м. Київ, пр-т Лесі Українки, 26</a>
-                 </li>
-                 <li>
-                    <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
-                 </li>
-                 <li>
-                    <a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
-                 </li>
-              </ul>
-        </address>
-      </div>
-    </footer> 
-    
+        <div class="container">
+          <a href="/" class="footer-logo">Web<span class="footer-logo">Studio</span></a>
+             <address>
+                <ul class="footer-list">
+                   <li>
+                      <a href="https://goo.gl/maps/DQpQ22Wtz2pHveBt8" target="_blank" class="footer-all link">м. Київ, пр-т Лесі Українки, 26</a>
+                   </li>
+                   <li>
+                      <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
+                   </li>
+                   <li>
+                      <a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
+                   </li>
+                </ul>
+          </address>
+        </div>
+      </footer> 
 </body>
 
 </html>
