--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
  </head>
 
@@ -35,11 +35,11 @@
        <div class="container">
          <div class="list-port">
            <ul class="btn-list list list-port">
-              <li class="portfolio-control"><button type="button" class="btn-button">Усі</button</li>
-              <li class="portfolio-control"><button type="button" class="btn-button">Веб-сайти</button</li>
-              <li class="portfolio-control"><button type="button" class="btn-button">Дизайн</button</li>
-              <li class="portfolio-control"><button type="button" class="btn-button">Додатки</button</li>
-              <li class="portfolio-control"><button type="button" class="btn-button">Маркетинг</button</li>
+              <li class="portfolio-control"><button type="button" class="btn-button">Усі</button></li>
+              <li class="portfolio-control"><button type="button" class="btn-button">Веб-сайти</button></li>
+              <li class="portfolio-control"><button type="button" class="btn-button">Дизайн</button></li>
+              <li class="portfolio-control"><button type="button" class="btn-button">Додатки</button></li>
+              <li class="portfolio-control"><button type="button" class="btn-button">Маркетинг</button></li>
            </ul>
          </div>
            <ul class="list-portfolio">
