--- a/index.html
+++ b/index.html
@@ -149,11 +149,39 @@
        </section>
    <!--Main company section постійні кліенти-->
        <section class="company-section">
-         <div class="container">
-           <div class="thumb-company">
-              <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
-           </div>
-
+         <div class="container company">
+            <ul class="company-list list">
+               <li class="compani-items">
+                 <div class="thumb-company">
+                   <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
+                 </div>
+               </li>
+               <li class="compani-items">
+                  <div class="thumb-company">
+                    <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
+                  </div>
+                </li>
+                <li class="compani-items">
+                  <div class="thumb-company">
+                    <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
+                  </div>
+                </li>
+                <li class="compani-items">
+                  <div class="thumb-company">
+                    <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
+                  </div>
+                </li>
+                <li class="compani-items">
+                  <div class="thumb-company">
+                    <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
+                  </div>
+                </li>
+                <li class="compani-items">
+                  <div class="thumb-company">
+                    <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
+                  </div>
+                </li>
+            </ul>
          </div>
        </section>
    </main>
