--- a/index.html
+++ b/index.html
@@ -148,38 +148,27 @@
          </div>
        </section>
    <!--Main company section постійні кліенти-->
-       <section class="company-section">
-         <div class="container company">
-            <ul class="company-list list">
+       <section class="section">
+         <div class="container">
+            <h2 class="company">Постійні клієнти</h2>
+            <ul class="compa-list list">
                <li class="compani-items">
-                 <div class="thumb-company">
-                   <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
-                 </div>
+                 <a href="" class="lead"><svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-Logo-company-1"></use></svg></a>
                </li>
                <li class="compani-items">
-                  <div class="thumb-company">
-                    <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
-                  </div>
+                  <a href="" class="lead"><svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-Logo-company-2"></use></svg></a>
                 </li>
                 <li class="compani-items">
-                  <div class="thumb-company">
-                    <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
-                  </div>
+                  <a href="" class="lead"><svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-Logo-company-3"></use></svg></a>
+               </li>
+                <li class="compani-items">
+                  <a href="" class="lead"><svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-Logo-company-4"></use></svg></a>
                 </li>
                 <li class="compani-items">
-                  <div class="thumb-company">
-                    <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
-                  </div>
+                  <a href="" class="lead"><svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-Logo-company-5"></use></svg></a>
                 </li>
                 <li class="compani-items">
-                  <div class="thumb-company">
-                    <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
-                  </div>
-                </li>
-                <li class="compani-items">
-                  <div class="thumb-company">
-                    <svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-icon-Logo-company-1"></use></svg>
-                  </div>
+                  <a href="" class="lead"><svg class="thumb-company-icons"><use href="./imge/symbol-defs.svg#icon-Logo-company-6"></use></svg></a>
                 </li>
             </ul>
          </div>
