Робота з блоком клієнти

--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@
 
       <footer class="footer">
         <div class="container">
-          <a href="/" class="footer-logo">Web<span class="footer-logo">Studio</span></a>
-            <address>
+          <div class="asid">
+            <a href="/" class="footer-logo">Web<span class="footer-logo">Studio</span></a>
+              <address>
                 <ul class="footer-list">
                   <li>
                      <a href="https://goo.gl/maps/DQpQ22Wtz2pHveBt8" target="_blank" class="footer-all link">м. Київ, пр-т Лесі Українки, 26</a>
@@ -191,7 +192,8 @@
                   </li>
                </ul>
             </address>
-             <div class="container-tip">
+          </div>
+             <div class="tip">
                <h2 class="title-items">приєднуйтесь</h2>
                 <ul class="teams-soc-list list">
                   <li class="teams-soc-items"><a href="#" class="teams-soc-link link"><svg class="teams-soc-icons"><use href="./imge/symbol-defs.svg#icon-instagram"></use></svg></a></li>
