--- a/portfolio.html
+++ b/portfolio.html
@@ -43,37 +43,37 @@
            </ul>
          </div>
            <ul class="list-portfolio">
-              <li class="items">
+              <li class="items-pic">
                  <img src="./imge/img7.jpg" alt="фото ноутбук" width="370" height="294">
                  <h2 class="portfolio-title">Технокряк</h2>
                  <p class="portfolio-text">Веб-сайт</p>
               </li>
-              <li class="items">
+              <li class="items-pic">
                  <img src="./imge/img8.jpg" alt="фото баскетболісти" width="370" height="294">
                  <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                  <p class="portfolio-text">Дизаин</p>
               </li>
-              <li class="items">
+              <li class="items-pic">
                  <img src="./imge/img9.jpg" alt="фото логотип ресторану" width="370" height="294">
                  <h2 class="portfolio-title">Ресторан Seafood</h2>
                  <p class="portfolio-text">Додаток</p>
               </li>
-              <li class="items">
+              <li class="items-pic">
                  <img src="./imge/img10.jpg" alt="фото навушники" width="370" height="294">
                  <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                  <p class="portfolio-text">Маркетинг</p>
               </li>
-              <li class="items">
+              <li class="items-pic">
                  <img src="./imge/img11.jpg" alt="фото коробка" width="370" height="294">
                  <h2 class="portfolio-title">Проєкт Boxes</h2>
                  <p class="portfolio-text">Додаток</p>
               </li>
-              <li class="items">
+              <li class="items-pic">
                  <img src="./imge/img12.jpg" alt="фото комп'ютер" width="370" height="294">
                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
                  <p class="portfolio-text">Веб-сайт</p>
               </li>
-              <li class="items">
+              <li class="items-pic">
                  <img src="./imge/img13.jpg" alt="фото книга" width="370" height="294">
                  <h2 class="portfolio-title">Видання Limited Edition</h2>
                  <p class="portfolio-text">Дизаин</p>
