--- a/index.html
+++ b/index.html
@@ -25,18 +25,10 @@
             </ul>
         </nav>
             <ul class="list">
-               <li class="items-soc">
-                  <ul class="list-soc-list list">
-                     <li class="list-soc-items"><a href="#" class="list-soc-link link"><svg class="list-soc-icons"><use href="./imge/symbol-defs.svg#icon-mail-hover"></use></svg></a></li>
-                  </ul>
-                  <a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a>
-               </li>
-               <li class="items-soc">
-                  <ul class="list-soc-list list">
-                     <li class="list-soc-items"><a href="#" class="list-soc-link link"><svg class="list-soc-icons"><use href="./imge/symbol-defs.svg#icon-mobile-hover"></use></svg></a></li>
-                  </ul>
-                  <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a>
-               </li>
+                 <li class="list-soc-items"><a href="mailto:info@devstudio.com" class="header-mail link"><svg width="16" heigth="12" class="list-soc-icons"><use href="./imge/symbol-defs.svg#icon-mail-hover"></use></svg>info@devstudio.com</a>
+                 </li>
+                 <li class="list-soc-items"><a href="tel:+380961111111" class="header-mail link"><svg width="10" heigth="16" class="list-soc-icons"><use href="./imge/symbol-defs.svg#icon-mobile-hover"></use></svg>+38 096 111 11 11</a>
+                 </li>
             </ul>
       </div>
     </header>
