--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@
                   <li class="item"><a href="" class="header-link link">Контакти</a></li>
                 </ul>
            </nav>
-                <ul class="list">
-                  <li class="items"><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
-                  <li class="items"><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
-                </ul>
+           <ul class="list">
+             <li class="list-soc-items"><a href="mailto:info@devstudio.com" class="header-mail link"><svg width="16" heigth="12" class="list-soc-icons"><use href="./imge/symbol-defs.svg#icon-mail-hover"></use></svg>info@devstudio.com</a></li>
+             <li class="list-soc-items"><a href="tel:+380961111111" class="header-mail link"><svg width="10" heigth="16" class="list-soc-icons"><use href="./imge/symbol-defs.svg#icon-mobile-hover"></use></svg>+38 096 111 11 11</a></li>
+           </ul>
          </div>
     </header>
        
@@ -94,23 +94,34 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+      <div class="container address-footer">
+        <div class="asid">
           <a href="/" class="footer-logo">Web<span class="footer-logo">Studio</span></a>
-             <address>
-               <ul class="footer-list">
-                  <li>
-                     <a href="https://goo.gl/maps/DQpQ22Wtz2pHveBt8" target="_blank" class="footer-all link">м. Київ, пр-т Лесі Українки, 26</a>
-                  </li>
-                  <li>
-                     <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
-                  </li>
-                  <li>
-                     <a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
-                  </li>
-               </ul>
-             </address>
+            <address>
+              <ul class="footer-list">
+                <li>
+                   <a href="https://goo.gl/maps/DQpQ22Wtz2pHveBt8" target="_blank" class="footer-all link">м. Київ, пр-т Лесі Українки, 26</a>
+                </li>
+                <li>
+                   <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
+                </li>
+                <li>
+                   <a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
+                </li>
+             </ul>
+          </address>
         </div>
-    </footer> 
+           <div class="tip">
+             <h2 class="title-items">приєднуйтесь</h2>
+              <ul class="teams-soc-list list">
+                <li class="teams-soc-items"><a href="#" class="teams-soc-link link"><svg class="teams-soc-icons"><use href="./imge/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+                <li class="teams-soc-items"><a href="#" class="teams-soc-link link"><svg class="teams-soc-icons"><use href="./imge/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+                <li class="teams-soc-items"><a href="#" class="teams-soc-link link"><svg class="teams-soc-icons"><use href="./imge/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+                <li class="teams-soc-items"><a href="#" class="teams-soc-link link"><svg class="teams-soc-icons"><use href="./imge/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+             </ul>
+          </div>
+       </div>
+     </footer> 
  </body>
 
 </html>
