--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
             </ul>
         </nav>
             <ul class="list">
-                 <li class="list-soc-items"><a href="mailto:info@devstudio.com" class="header-mail link"><svg width="16" heigth="12" class="list-soc-icons"><use href="./imge/symbol-defs.svg#icon-mail-hover"></use></svg>info@devstudio.com</a>
-                 </li>
-                 <li class="list-soc-items"><a href="tel:+380961111111" class="header-mail link"><svg width="10" heigth="16" class="list-soc-icons"><use href="./imge/symbol-defs.svg#icon-mobile-hover"></use></svg>+38 096 111 11 11</a>
-                 </li>
+               <li class="list-soc-items"><a href="mailto:info@devstudio.com" class="header-mail link"><svg width="16" heigth="12" class="list-soc-icons"><use href="./imge/symbol-defs.svg#icon-mail-hover"></use></svg>info@devstudio.com</a></li>
+               <li class="list-soc-items"><a href="tel:+380961111111" class="header-mail link"><svg width="10" heigth="16" class="list-soc-icons"><use href="./imge/symbol-defs.svg#icon-mobile-hover"></use></svg>+38 096 111 11 11</a></li>
             </ul>
       </div>
     </header>
@@ -168,7 +166,7 @@
    </main>
 
       <footer class="footer">
-        <div class="container">
+        <div class="container address-footer">
           <div class="asid">
             <a href="/" class="footer-logo">Web<span class="footer-logo">Studio</span></a>
               <address>
